--- a/.env
+++ b/.env
@@ -1,1 +1,3 @@
-MONGO_URI = "mongodb://localhost:27017/?readPreference=primary&appname=MongoDB%20Compass&ssl=false"
+MONGO_URI = "mongodb://localhost:27017/cloud-notebook?readPreference=primary&appname=MongoDB%20Compass&ssl=false"
+
+JWT_SECRET = "G{\JY|(OOYV}Zf+Gf=#h%>e=}D]n\t*>knMhnN,1vA:+6>l~"
